syntax = "proto3";

package key_attestation_v1;

service KeyAttestationService {
  rpc Attest (AttestationRequest) returns (AttestationResponse);
  rpc MakeCredential(ActivationRequest) returns (ActivationResponse);
}

message AttestationRequest {
  bytes decrypted_credentials = 1;
  int32 correlation_id = 2;
}

message AttestationResponse {
  bool is_attested = 1;
  string message = 2;
  string certificate = 3;
}

message ActivationRequest {
  string csr = 1;
  bytes ek_pub = 2;
}

message ActivationResponse {
  bytes encrypted_credential = 1;
  bytes encrypted_secret = 2;
  int32 correlation_id = 3;
}